[tool.poetry]
name = "ca2a"
version = "0.1.0"
description = "A command-line utility for interacting with A2A agents."
authors = ["RussellLuo <luopeng.he@gmail.com>"]
readme = "README.md"
repository = "https://github.com/RussellLuo/ca2a"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
a2a-sdk = {version = ">=0.2.14", extras = ["grpc"]}
pygments = ">=2.19.1"

[tool.poetry.scripts]
ca2a = "ca2a:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
